# TinyLLaVA-Video-R1

./: README.md  eval.py  pyproject.toml
scripts/: zero2.json
scripts/eval/: mlvu.sh  mmvu.sh  mvbench.sh  video_counting.py  videomme.sh
scripts/train/: train_qwen2_coldstart.sh  train_qwen2_reason_count.sh  train_qwen2_reason_nextqa.sh  train_qwen2_reason_nextqa_another.sh
tinyllava/data/: __init__.py  dataset_coldstart.py  image_preprocess.py  video_preprocess.py
tinyllava/eval/: eval_mlvu.py  eval_mmvu.py  eval_mvbench.py  eval_videomme.py  run_tiny_llava.py
tinyllava/model/: load_model.py  modeling_tinyllava.py
tinyllava/model/connector/: base.py  groupresampler.py
tinyllava/model/llm/: qwen2.py
tinyllava/model/vision_tower/: siglip.py
tinyllava/train/: tinyllava_trainer.py  tinyllava_trainer_reason.py  train.py  train_coldstart.py
tinyllava/training_recipe/: base.py
tinyllava/utils/: arguments.py
